--- a/frontend/vote.html
+++ b/frontend/vote.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SK E-Voting System - Vote</title>
     <link rel="stylesheet" href="./css/output.css">
+    <link rel="stylesheet" href="./css/fonts.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <style>
@@ -43,7 +44,7 @@
 <body>
     <div class="rounded-lg shadow-lg p-6 mb-8" id="mCont">
         <div class="container mx-auto p-8" id="content">
-            <h1 class="text-3xl font-bold mb-8 text-gray-800">Vote</h1>
+            <h1 class="text-3xl font-bold mb-8 text-gray-800 nsofia">Vote</h1>
             <form id="voteForm">
                 <div id="positions"></div>
                 <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600">Submit
