--- a/frontend/about.html
+++ b/frontend/about.html
@@ -9,26 +9,26 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <style>
-    body { background-image: url("../assets/img/wp.jpg"); } .secAb { background-color: rgba(255, 255, 255, 0.509); } .shine-effect { position: relative; }.shine-effect::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(360deg, rgba(255, 217, 0, 0.467) 0%, transparent 50%, rgba(0, 0, 0, 0.6) 100%); border-radius: 9px; opacity: 0; transition: opacity 2s ease; pointer-events: none; } .shine-effect:hover::before { opacity: 1; } .shine-effect-2 { position: relative; } .shine-effect-2::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(360deg, rgba(255, 0, 0, 0.591) 0%, transparent 50%, rgba(0, 0, 0, 0.6) 100%); border-radius: 9px; opacity: 0; transition: opacity 2s ease; pointer-events: none; } .shine-effect-2:hover::before { opacity: 1; } .shine-effect-3 { position: relative; } .shine-effect-3::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(360deg, rgba(0, 255, 110, 0.591) 0%, transparent 50%, rgba(0, 0, 0, 0.6) 100%); border-radius: 9px; opacity: 0; transition: opacity 2s ease; pointer-events: none; } .shine-effect-3:hover::before { opacity: 1; } .shine-effect-4 { position: relative; } .shine-effect-4::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(360deg, rgba(0, 119, 255, 0.591) 0%, transparent 50%, rgba(0, 0, 0, 0.6) 100%); border-radius: 9px; opacity: 0; transition: opacity 2s ease; pointer-events: none; } .shine-effect-4:hover::before { opacity: 1; } 
+    body { background-image: url("../assets/img/wp.jpg"); } .secAb { background-color: rgba(255, 255, 255, 0.10); } .shine-effect { position: relative; }.shine-effect::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(360deg, rgba(255, 217, 0, 0.467) 0%, transparent 50%, rgba(0, 0, 0, 0.6) 100%); border-radius: 9px; opacity: 0; transition: opacity 2s ease; pointer-events: none; } .shine-effect:hover::before { opacity: 1; } .shine-effect-2 { position: relative; } .shine-effect-2::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(360deg, rgba(255, 0, 0, 0.591) 0%, transparent 50%, rgba(0, 0, 0, 0.6) 100%); border-radius: 9px; opacity: 0; transition: opacity 2s ease; pointer-events: none; } .shine-effect-2:hover::before { opacity: 1; } .shine-effect-3 { position: relative; } .shine-effect-3::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(360deg, rgba(0, 255, 110, 0.591) 0%, transparent 50%, rgba(0, 0, 0, 0.6) 100%); border-radius: 9px; opacity: 0; transition: opacity 2s ease; pointer-events: none; } .shine-effect-3:hover::before { opacity: 1; } .shine-effect-4 { position: relative; } .shine-effect-4::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(360deg, rgba(0, 119, 255, 0.591) 0%, transparent 50%, rgba(0, 0, 0, 0.6) 100%); border-radius: 9px; opacity: 0; transition: opacity 2s ease; pointer-events: none; } .shine-effect-4:hover::before { opacity: 1; }
 </style>
 
 <body>
     <div>
         <section class="py-6 dark:bg-gray-100 dark:text-gray-800 rounded-xl secAb">
             <div class="container flex flex-col items-center justify-center p-4 mx-auto sm:p-10">
-                <p class="p-2 text-md font-medium tracking-wider text-center uppercase text-gray-200">Development Team (Group 3)</p>
-                <h1 class="text-4xl font-bold leading-none text-center sm:text-5xl">The talented people behind the
+                <p class="p-2 text-md font-medium tracking-wider text-center uppercase text-gray-300">Development Team (Group 3)</p>
+                <h1 class="text-4xl font-bold leading-none text-center sm:text-5xl text-gray-100">The talented people behind the
                     scenes</h1>
                 <div id="team-members" class="flex flex-row flex-wrap justify-center mt-8">
                     <!-- Me -->
                     <div
-                        class="shine-effect flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 dark:bg-gray-800 dark:text-gray-100 transition-transform transform hover:scale-105 z-10">
+                        class="shine-effect flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 bg-gray-900 transition-transform transform hover:scale-105 z-10">
                         <img alt=""
                             class="self-center flex-shrink-0 w-24 h-24 -mt-12 bg-center bg-cover rounded-full dark:bg-gray-500 z-30"
                             src="https://rscv-main.vercel.app/assets/me.2f4e1c72.jpg">
                         <div class="flex-1 my-4">
-                            <p class="text-xl font-semibold leading-snug">Jameel Tutungan</p>
-                            <p>All-around Developer (?)</p>
+                            <p class="text-xl font-semibold leading-snug text-gray-100">Jameel Tutungan</p>
+                            <p class="text-gray-300">All-around Developer (?)</p>
                         </div>
                         <div class="flex items-center justify-center p-3 space-x-3 border-t-2">
                             <a rel="noopener noreferrer" href="mailto: tutunganjameelu1@gmail.com" title="email"
@@ -63,13 +63,13 @@
                     </div>
                     <!--glenn-->
                     <div
-                        class="shine-effect-2 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 dark:bg-gray-800 dark:text-gray-100 transition-transform transform hover:scale-105 z-10">
+                        class="shine-effect-2 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 bg-gray-900 transition-transform transform hover:scale-105 z-10">
                         <img alt=""
                             class="self-center flex-shrink-0 w-24 h-24 -mt-12 bg-center bg-cover rounded-full dark:bg-gray-500 z-30"
                             src="https://i.ibb.co/BwcBdHc/gl.jpg">
                         <div class="flex-1 my-4">
-                            <p class="text-xl font-semibold leading-snug">Glennbrix Diolazo</p>
-                            <p>Group Leader / Project Manager / System Analyst</p>
+                            <p class="text-xl font-semibold leading-snug text-gray-100">Glennbrix Diolazo</p>
+                            <p class="text-gray-300">Group Leader / Project Manager / System Analyst</p>
                         </div>
                         <div class="flex items-center justify-center p-3 space-x-3 border-t-2">
                             <a rel="noopener noreferrer" href="#" title="email"
@@ -86,13 +86,13 @@
                     </div>
                     <!--jerico-->
                     <div
-                        class="shine-effect-3 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 dark:bg-gray-800 dark:text-gray-100 transition-transform transform hover:scale-105 z-10">
+                        class="shine-effect-3 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 bg-gray-900 transition-transform transform hover:scale-105 z-10">
                         <img alt=""
                             class="self-center flex-shrink-0 w-24 h-24 -mt-12 bg-center bg-cover rounded-full dark:bg-gray-500 z-30"
                             src="https://i.ibb.co/r21gBxk/jc.jpg">
                         <div class="flex-1 my-4">
-                            <p class="text-xl font-semibold leading-snug">Jerico Evangelista</p>
-                            <p>Project Coordinator / UI/UX Designer</p>
+                            <p class="text-xl font-semibold leading-snug text-gray-100">Jerico Evangelista</p>
+                            <p class="text-gray-300">Project Coordinator / UI/UX Designer</p>
                         </div>
                         <div class="flex items-center justify-center p-3 space-x-3 border-t-2">
                             <a rel="noopener noreferrer" href="#" title="email"
@@ -109,13 +109,13 @@
                     </div>
                     <!--eugene-->
                     <div
-                        class="shine-effect-4 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 dark:bg-gray-800 dark:text-gray-100 transition-transform transform hover:scale-105">
+                        class="shine-effect-4 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 bg-gray-900 transition-transform transform hover:scale-105">
                         <img alt=""
                             class="shine-effect-4 self-center flex-shrink-0 w-24 h-24 -mt-12 bg-center bg-cover rounded-full dark:bg-gray-500"
                             src="https://i.ibb.co/4KfCTt7/eg.jpg">
                         <div class="flex-1 my-4">
-                            <p class="text-xl font-semibold leading-snug">Eugene Dianito</p>
-                            <p>System Analyst</p>
+                            <p class="text-xl font-semibold leading-snug text-gray-100">Eugene Dianito</p>
+                            <p class="text-gray-300">System Analyst</p>
                         </div>
                         <div class="flex items-center justify-center p-3 space-x-3 border-t-2">
                             <a rel="noopener noreferrer" href="#" title="email"
@@ -132,13 +132,13 @@
                     </div>
                     <!--jhob-->
                     <div
-                        class="shine-effect-4 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 dark:bg-gray-800 dark:text-gray-100 transition-transform transform hover:scale-105 z-10">
+                        class="shine-effect-4 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 bg-gray-900 transition-transform transform hover:scale-105 z-10">
                         <img alt=""
                             class="self-center flex-shrink-0 w-24 h-24 -mt-12 bg-center bg-cover rounded-full dark:bg-gray-500 z-30"
                             src="https://i.ibb.co/cLbpZ3Z/jh.jpg">
                         <div class="flex-1 my-4">
-                            <p class="text-xl font-semibold leading-snug">Jhob Aguilar</p>
-                            <p>System Analyst</p>
+                            <p class="text-xl font-semibold leading-snug text-gray-100">Jhob Aguilar</p>
+                            <p class="text-gray-300">System Analyst</p>
                         </div>
                         <div class="flex items-center justify-center p-3 space-x-3 border-t-2">
                             <a rel="noopener noreferrer" href="#" title="email"
@@ -155,13 +155,13 @@
                     </div>
                     <!--torreon-->
                     <div
-                        class="shine-effect-4 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 dark:bg-gray-800 dark:text-gray-100 transition-transform transform hover:scale-105 z-10">
+                        class="shine-effect-4 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 bg-gray-900 transition-transform transform hover:scale-105 z-10">
                         <img alt=""
                             class="self-center flex-shrink-0 w-24 h-24 -mt-12 bg-center bg-cover rounded-full dark:bg-gray-500 z-30"
                             src="https://i.ibb.co/MB6DNZ2/tr.jpg">
                         <div class="flex-1 my-4">
-                            <p class="text-xl font-semibold leading-snug">Angelo Torreon</p>
-                            <p>System Analyst</p>
+                            <p class="text-xl font-semibold leading-snug text-gray-100">Angelo Torreon</p>
+                            <p class="text-gray-300">System Analyst</p>
                         </div>
                         <div class="flex items-center justify-center p-3 space-x-3 border-t-2">
                             <a rel="noopener noreferrer" href="#" title="email"
@@ -178,13 +178,13 @@
                     </div>
                     <!--mendoza-->
                     <div
-                        class="shine-effect-4 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 dark:bg-gray-800 dark:text-gray-100 transition-transform transform hover:scale-105 z-10">
+                        class="shine-effect-4 flex flex-col justify-center w-full px-8 mx-6 my-12 text-center rounded-xl md:w-96 lg:w-80 xl:w-64 bg-gray-900 transition-transform transform hover:scale-105 z-10">
                         <img alt=""
                             class="self-center flex-shrink-0 w-24 h-24 -mt-12 bg-center bg-cover rounded-full dark:bg-gray-500 z-30"
                             src="https://i.ibb.co/h95pcHH/dfg.jpg">
                         <div class="flex-1 my-4">
-                            <p class="text-xl font-semibold leading-snug">Camille Mendoza</p>
-                            <p>Group Member</p>
+                            <p class="text-xl font-semibold leading-snug text-gray-100">Camille Mendoza</p>
+                            <p class="text-gray-300">Group Member</p>
                         </div>
                         <div class="flex items-center justify-center p-3 space-x-3 border-t-2">
                             <a rel="noopener noreferrer" href="#" title="email"
