--- a/frontend/homeFir.html
+++ b/frontend/homeFir.html
@@ -81,12 +81,12 @@
         </div>
         <div class="flex items-center mt-6 px-4 z-40">
           <img src="https://rscv-main.vercel.app/assets/me.2f4e1c72.jpg" alt="User 1" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
-          <img src="https://i.ibb.co/BqrFWCS/user-icon-trendy-flat-style-600nw-1697898655.jpg" alt="User 2" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
-          <img src="https://i.ibb.co/BqrFWCS/user-icon-trendy-flat-style-600nw-1697898655.jpg" alt="User 3" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
-          <img src="https://i.ibb.co/BqrFWCS/user-icon-trendy-flat-style-600nw-1697898655.jpg" alt="User 4" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
-          <img src="https://i.ibb.co/BqrFWCS/user-icon-trendy-flat-style-600nw-1697898655.jpg" alt="User 5" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
-          <img src="https://i.ibb.co/BqrFWCS/user-icon-trendy-flat-style-600nw-1697898655.jpg" alt="User 6" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
-        
+          <img src="https://i.ibb.co/BwcBdHc/gl.jpg" alt="User 2" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
+          <img src="https://i.ibb.co/r21gBxk/jc.jpg" alt="User 3" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
+          <img src="https://i.ibb.co/4KfCTt7/eg.jpg" alt="User 4" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
+          <img src="https://i.ibb.co/cLbpZ3Z/jh.jpg" alt="User 5" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
+          <img src="https://i.ibb.co/MB6DNZ2/tr.jpg" alt="User 6" class="w-10 h-10 rounded-full border-2 border-white shadow-md -ml-4">
+    
           <p class="ml-4 text-gray-600">Developed By: <span class="font-semibold text-gray-900">Group 3 (BSIT 2A)</span> Members.</p>
         </div>
       </div>
