--- a/frontend/voterReg2.html
+++ b/frontend/voterReg2.html
@@ -4,35 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SK E-Voting System - Candidate Registration</title>
-    <link href="./css/output.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
-    <style>
-        body {
-            background-image: url("https://i.ibb.co/8XYcxyQ/photo-2024-05-22-23-45-35.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            backdrop-filter: brightness(50%) blur(3px);
-        }
-        .error {
-            color: red;
-            display: none;
-        }
-    </style>
+    <title>SK E-Voting System - Voter Registration</title>
+    <link rel="stylesheet" href="./css/output.css">
 </head>
+<style>
+    .error {
+        color: red;
+        display: none;
+    }
+</style>
 
-<body>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
 
-
-    <div id="ntf"></div>
-
-    <div id="notificationContainer" class="fixed top-4 right-4"></div>
-
-    <div class="flex items-center justify-center min-h-screen" id="candCont">
+    <div class="flex items-center justify-center min-h-screen">
         <div class="bg-gray-800 rounded-lg shadow-lg p-6 mb-8 mx-auto flex flex-wrap" style="max-width: 900px;">
             <div class="w-full lg:w-1/2 px-4">
-                <h1 class="text-2xl font-semibold mb-4 text-gray-200">Candidate Registration</h1><hr><br>
+                <h1 class="text-2xl font-semibold mb-4 text-gray-100">Voter Registration</h1>
+                <hr><br>
                 <form id="registrationForm" class="grid grid-cols-2 gap-4">
                     <div class="mb-5">
                         <label for="name" class="form-label text-gray-300">Full Name:</label>
@@ -49,11 +37,18 @@
                         <span class="error" id="ageError">Invalid characters detected.</span>
                     </div>
                     <div class="mb-5">
-                        <label for="residency" class="form-label text-gray-300">Residency:</label>
-                        <input type="text" id="residency" name="residency"
+                        <label for="passwprd" class="form-label text-gray-300">Password:</label>
+                        <input type="password" id="password" name="password"
                             class="form-input mt-1 w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"
-                            placeholder="Residency" required>
-                        <span class="error" id="residencyError">Invalid characters detected.</span>
+                            placeholder="********" required>
+                        <span class="error" id="passwordError">Invalid characters detected.</span>
+                    </div>
+                    <div class="mb-5">
+                        <label for="birthday" class="form-label text-gray-300">Birthday:</label>
+                        <input type="date" id="birthday" name="birthday"
+                            class="form-input mt-1 w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"
+                            required>
+                        <span class="error" id="birthdayError">Invalid characters detected.</span>
                     </div>
                     <div class="mb-5">
                         <label for="citizenship" class="form-label text-gray-300">Citizenship:</label>
@@ -63,23 +58,25 @@
                         <span class="error" id="citizenshipError">Invalid characters detected.</span>
                     </div>
                     <div class="mb-5">
-                        <label for="party_affiliation" class="form-label text-gray-300">Party:</label>
-                        <input type="text" id="party_affiliation" name="party_affiliation"
+                        <label for="contact_no" class="form-label text-gray-300">Contact No.:</label>
+                        <input type="tel" id="contact_no" name="contact_no"
                             class="form-input mt-1 w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"
-                            placeholder="Party" required>
-                        <span class="error" id="partyError">Invalid characters detected.</span>
+                            placeholder="Contact No." required>
+                        <span class="error" id="contactError">Invalid characters detected.</span>
                     </div>
                     <div class="mb-5">
-                        <label for="position" class="form-label text-gray-300">Position:</label>
-                        <select id="position" name="position"
-                            class="form-select mt-1 w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"
-                            required>
-                            <option value="SK Chairperson">SK Chairperson</option>
-                            <option value="SK Secretary">SK Secretary</option>
-                            <option value="SK Treasurer">SK Treasurer</option>
-                            <option value="SK Auditor">SK Auditor</option>
-                            <option value="SK Kagawad">SK Kagawad</option>
-                        </select>
+                        <label for="address" class="form-label text-gray-300">Address:</label>
+                        <input type="text" id="address" name="address"
+                            class="form-input mt-1 w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"
+                            placeholder="Address" required>
+                        <span class="error" id="addressError">Invalid characters detected.</span>
+                    </div>
+                    <div class="mb-5">
+                        <label for="occupation class="form-label text-gray-300">Occupation:</label>
+                        <input type="text" id="occupation" name="occupation"
+                            class="form-input mt-1 w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"
+                            placeholder="Occupation" required>
+                        <span class="error" id="occupationError">Invalid characters detected.</span>
                     </div>
                     <div>
                         <button id="registerButton"
@@ -115,7 +112,7 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(document).ready(function () {
             const invalidChars = /[<>\/\\"'&]/;
@@ -161,7 +158,7 @@
                 var formData = $(this).serialize();
                 $.ajax({
                     type: 'POST',
-                    url: '../backend/candidate_registration.php',
+                    url: '../backend/candidate_registration.php',  // Adjusted URL
                     data: formData,
                     success: function (response) {
                         $('#notification').removeClass('hidden').html(response);
@@ -173,5 +170,7 @@
             });
         });
     </script>
+
 </body>
+
 </html>
