--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         });
 
     </script>
+    <script src="./backend/js/IPChecker.js"></script>
     <script src="./backend/js/skInjectLogo.js"></script>
     <!--<script src="./backend/js/chatbot.js"></script>-->
 
