--- a/frontend/register.html
+++ b/frontend/register.html
@@ -54,7 +54,7 @@
                         <div>
                             <div class="flex -mx-3">
                                 <div class="w-full px-3 mb-5">
-                                    <label for="username" class="text-xs font-semibold px-1 text-white">Username</label>
+                                    <label for="username" class="text-xs font-semibold px-1 text-white">Full Name</label>
                                     <div class="flex">
                                         <div
                                             class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center">
@@ -62,7 +62,7 @@
                                         </div>
                                         <input type="text"
                                             class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-white"
-                                            id="username" name="username" placeholder="Username">
+                                            id="username" name="username" placeholder="Full Name">
                                     </div>
                                 </div>
                             </div>
@@ -154,8 +154,6 @@
         }
     </script>
     <script src="../backend/js/skInjectLogo.js"></script>
-    <script src="../backend/js/chatbot.js"></script>
-
 </body>
 
 </html>
