--- a/frontend/home.html
+++ b/frontend/home.html
@@ -9,7 +9,7 @@
 </head>
 <style>
   body {
-    background-image: url("../assets/img/wp.jpg");
+    background-image: url("https://wsrv.nl/?url=https://i.ibb.co/3FxkhJb/wallpapersden-com-bloom-edges-blue-windows-11-3840x2160.jpg&maxage=31d&l=6");
   }
 
   .herosec {
